# ProxVNC

./: DirectConnectionExample.py  LICENSE  ProxmoxAPIExample.py  ProxmoxAPILXCConnection.py  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
Examples/: ProxmoxAPINodeConnection.py  directNodeConnection.py  sendFileToNode.py
Examples/lxc/: ProxmoxAPILXCConnection.py  directLXCConnection.py  directNodeConnection.py
ProxVNC/: __init__.py
ProxVNC/core/: ProxmoxVNC.py  connection.py  terminal.py  utils.py
ProxVNC/proxmoxer/backends/: https.py  openssh.py  ssh_paramiko.py
ProxWSVNC/: __init__.py
ProxWSVNC/core/: ProxmoxConnection.py  ProxmoxVNC.py  connection.py  terminal.py
ProxWSVNC/proxmoxer/: core.py
ProxWSVNC/proxmoxer/backends/: command_base.py  local.py
tests/: ProxmoxAPIExample.py
