[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ProxVNC"
version = "1.0.0"
description = "This library allows connecting and sending commands direcly to a proxmox node/lxc via vnc websocket"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Xavier Giralt" }
]
keywords = ["library", "proxmox", "vnc", "websocket"]
requires-python = ">=3.8"

[project.urls]
Homepage = ""
Repository = ""
