[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ProxVNC"
version = "1.2.0"
description = "A python package that allows connecting and sending commands direcly to a proxmox node/lxc via vnc websocket."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Xavier Giralt" }
]
keywords = ["package", "proxmox", "vnc", "websocket"]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.0",
    "websocket-client>=1.9.0",
    "urllib3>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/xgiralt64/ProxVNC"
Repository = "https://github.com/xgiralt64/ProxVNC"

[tool.setuptools.packages.find]
include = ["ProxVNC", "ProxVNC.*"]
exclude = ["Examples*"]
